差不多了，缺戴夫，缺僵尸帽子渲染，钱币捡起不消失bug